--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,9 +3,6 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -46,7 +43,7 @@
                         tools:text="Player A" />
 
                 <TextView
-                        android:id="@+id/tvGamePointA"
+                        android:id="@+id/tvPlayerGamePoint"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
@@ -76,7 +73,7 @@
                         tools:text="Player B" />
 
                 <TextView
-                        android:id="@+id/tvGamePointB"
+                        android:id="@+id/tvBotGamePoint"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
@@ -126,6 +123,15 @@
                         tools:text="100" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/game_winner"
+                android:layout_below="@id/cardView"
+                android:fontFamily="serif-monospace"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:layout_centerHorizontal="true"/>
     </RelativeLayout>
 
     <RelativeLayout
@@ -135,13 +141,52 @@
             android:layout_weight="1" >
 
         <Button
-                android:id="@+id/btnGamePlay"
+                android:id="@+id/btnStartGame"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:background="#4CAF50"
                 android:text="@string/btn_start_game"
+                android:backgroundTint="@color/red"
                 android:textColor="@color/white" />
+
+        <Button
+                android:id="@+id/btnPauseGame"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:backgroundTint="@color/red"
+                android:text="@string/btn_pause_game"
+                android:textColor="@color/white"
+                android:visibility="gone"/>
+
+        <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:visibility="gone"
+                android:id="@+id/oo">
+
+            <Button
+                    android:id="@+id/btnRestartGame"
+                    android:layout_width="120dp"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@color/red"
+                    android:text="@string/btn_restart_game"
+                    android:textColor="@color/white"
+                    android:layout_marginEnd="2dp"/>
+
+            <Button
+                    android:id="@+id/btnContinueGame"
+                    android:layout_width="120dp"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@color/red"
+                    android:text="@string/btn_continue_game"
+                    android:textColor="@color/white"
+                    android:layout_toEndOf="@id/btnRestartGame"
+                    android:layout_marginStart="2dp"/>
+
+        </RelativeLayout>
+
 
     </RelativeLayout>
 
@@ -151,11 +196,12 @@
             android:layout_height="match_parent"
             android:layout_weight="1" >
 
+
         <ImageView
                 android:id="@+id/dice_image"
                 android:layout_width="200dp"
                 android:layout_height="200dp"
-                android:background="#F44336"
+                android:background="@color/purple_700"
                 android:layout_centerInParent="true"
                 android:contentDescription="@string/dice_image_contentDescription"
                 app:srcCompat="@drawable/ic_dice1"/>
